fix z-index related issue in the footer

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -6,7 +6,6 @@
   justify-content: space-around;
   align-items: center;
   background-color: var(--color-brand-green);
-  z-index: -1;
 }
 
 .footer[data-theme="dark"] {
